fixed whitespace 2

--- a/portfoliov2.css
+++ b/portfoliov2.css
@@ -472,7 +472,6 @@ footer {
   .timeline-section {
     padding: 60px 20px 20px 20px; /* top, right, bottom, left */
     font-family: 'Open Sans', sans-serif;
-    min-height: calc(80vh - 230px); /* adjust based on your layout */
     color: white;
   }
   
